--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: false
 addons:
   apt:
     packages:
-      - oracle-java8-installer
+      #- oracle-java8-installer
       - oracle-java7-installer
 
 jdk:
