--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: java
 
-sudo: false
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+sudo: required
+#addons:
+#  apt:
+#    packages:
+#      - oracle-java8-installer
 
-#jdk:
- # - oraclejdk8
- # - oraclejdk7
+jdk:
+  - oraclejdk8
+  - oraclejdk7
  # - openjdk6
 
 before_script:
